[package]
name = "place"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-place"
path = "src/test.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
redis = { version = "0.29.0", features = ["tokio-comp"] }
bb8-redis = "0.20.0"
scylla = "0.15.1"
tokio = { version = "1.43", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.138"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
chrono = "0.4.38"
uuid = { version = "1.12.1", features = ["v4"] }
tokio-tungstenite = "0.26.1"
