[package]
name = "place"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-place"
path = "src/test.rs"

[[bin]]
name = "create-place-schema"
path = "src/schema.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
async-stream = "0.3.6"
bb8-redis = "0.21.0"
deadpool-redis = "0.19.0"
scylla = "0.15.1"
tokio = { version = "1.43", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.138"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
chrono = "0.4.38"